updated layout and loading of assets

--- a/packages/docs-example/app/site.scss
+++ b/packages/docs-example/app/site.scss
@@ -4,6 +4,11 @@ html {
   font: 16px/1.45em 'Helvetica';
 }
 
+body {
+  margin: 0;
+  padding: 10px;
+}
+
 
 a, button, input {
   appearance: none;
