--- a/packages/docs-plugin-default-annotations/public/_annotations/states.jade
+++ b/packages/docs-plugin-default-annotations/public/_annotations/states.jade
@@ -61,6 +61,8 @@ div(class="c-annotation c-annotation--states")
                 - options.preCls = 'c-frame__pre'
                 - options.codeCls = 'c-frame__code u-copied js-copied__content'
                 - options.lineno = true
-                - options.start = (blockinfo.code || {}).start || 1
+                - options.start = (blockinfo.code || {}).start
+                if options.start <= 0
+                  - options.start = 1
                 - options.language = lang
                 != global.highlight(item.raw, options)
