--- a/packages/docs-theme-default/public/styles/base/_normalize.styl
+++ b/packages/docs-theme-default/public/styles/base/_normalize.styl
@@ -241,9 +241,9 @@ input[type=search]::-webkit-search-decoration
 
 
 fieldset
-  border 1px solid #c0c0c0
-  margin 0 2px
-  padding 0.35em 0.625em 0.75em
+  border 0
+  margin 0
+  padding 0
 
 // 1. Correct `color` not being inherited in IE 8/9.
 // 2. Remove padding so people aren't caught out if they zero out fieldsets.
