--- a/packages/docs-theme-default/public/styles/utilities/index.styl
+++ b/packages/docs-theme-default/public/styles/utilities/index.styl
@@ -1,7 +1,1 @@
-@import '_reset'
-@import '_clear'
-@import '_visibility'
-@import '_pull'
-@import '_loading'
-@import '_lazy'
-@import '_copied'
+@import '_*'
