--- a/packages/docs-theme-default/public/_layout/footer.jade
+++ b/packages/docs-theme-default/public/_layout/footer.jade
@@ -1,2 +1,5 @@
-footer(class="s-footer u-clear" role="contentinfo" itemtype="https://schema.org/WPFooter" itemscope)
-  h1 Site Footer
+footer(class="s-documentation__footer u-clear o-container" role="contentinfo" itemtype="https://schema.org/WPFooter" itemscope)
+  | coded with 
+  i(class="u-icon u-icon--heart o-pseudo o-pseudo--middle") love
+  |  by 
+  a(href="https://github.com/tjbenton") Tyler Benton
