--- a/packages/docs-theme-default/public/index.jade
+++ b/packages/docs-theme-default/public/index.jade
@@ -1,10 +1,6 @@
-
-//- block content
-  //- include layout/page.jade
-
-h1 Home page
-
-//- != partial('_helpers/json', { json: public._data.pages.general.page })
-
-
-!= partial('_layout/annotation', public._data.pages.general.page)
+- var index = (((public._data || {}).pages || {}).index || {}).page
+- var home = (((public._data || {}).pages || {}).home || {}).page
+if index || home
+  != partial('_layout/annotation', index || home)
+else 
+  p use <code>@page index</code> or <code>@page home</code> to get items on this page
