improved base layout

--- a/packages/docs-theme-default/public/_layout/footer.jade
+++ b/packages/docs-theme-default/public/_layout/footer.jade
@@ -1,4 +1,4 @@
-footer(class="s-documentation__footer u-clear o-container" role="contentinfo" itemtype="https://schema.org/WPFooter" itemscope)
+footer(class="s-documentation__footer u-clear" role="contentinfo" itemtype="https://schema.org/WPFooter" itemscope)
   | coded with 
   i(class="u-icon u-icon--heart o-pseudo o-pseudo--middle") love
   |  by 
