--- a/packages/docs-theme-default/public/styles/base/_general.styl
+++ b/packages/docs-theme-default/public/styles/base/_general.styl
@@ -71,6 +71,9 @@ html, body
   spacing off inner
   width 100%
 
+  +media('>lg')
+    font-size: ($config.font-size + 2px);
+
 body
   transition filter 0.5s ease
 
