--- a/packages/docs-theme-default/public/styles/tools/_variables.styl
+++ b/packages/docs-theme-default/public/styles/tools/_variables.styl
@@ -36,14 +36,14 @@ color-set({
 /// @markup {styl}
 /// .foo
 ///   border-radius $config.border-radius
-$spacing = 1em;
+$spacing = 1.45em;
 $config = {
   'border-radius': 0.4em,
   'border-color': color(a, -6),
   'color': color(a, 2),
   'font-family': unquote('Source Sans Pro, Helvetica, Arial, sans-serif'),
   'font-size': 16px,
-  'line-height': $spacing + 0.45em,
+  'line-height': $spacing,
   'spacing': $spacing,
   'spacing-sizes': {
     'off': 0,
