--- a/packages/docs-theme-default/public/styles/components/_annotation.styl
+++ b/packages/docs-theme-default/public/styles/components/_annotation.styl
@@ -1,5 +1,5 @@
 .c-annotation
-  spacing medium inner
+  spacing small inner
 
   &--raw-code
     &:not(.is-expanded) .c-expanded, &.is-expanded .c-collapsed
