--- a/packages/docs-theme-default/public/styles/components/_frame.styl
+++ b/packages/docs-theme-default/public/styles/components/_frame.styl
@@ -6,9 +6,6 @@ $has-no-state
   .has-no-state &
     display block
 
-
-
-
 .c-frame
   $border-radius = 4px
   border-radius $border-radius
@@ -132,11 +129,10 @@ $has-no-state
 
   &__pre, &__code
     display block
-    font 500 14px/1.4em 'Source Code Pro', Consolas, Monaco, 'Andale Mono', monospace
+    font 500 1em/1.4em 'Source Code Pro', Consolas, Monaco, 'Andale Mono', monospace
     font-smoothing auto
     hyphens none
     overflow visible
-    // overflow-y hidden
     margin 0
     padding 0
     position relative
@@ -178,8 +174,5 @@ $has-no-state
     .has-no-designer &
       display none
 
-
   .has-no-designer & .c-frame .is-loading
     display none
-
-
