--- a/packages/docs-theme-default/public/_helpers/code-list.jade
+++ b/packages/docs-theme-default/public/_helpers/code-list.jade
@@ -1,4 +1,4 @@
 if !!data
-  div.c-code-list
+  span.c-code-list
     - data = !_.isArray(data) ? [ data ] : data
     != '<code>' + data.join('</code>, <code>') + '</code>'
